--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
   <!-- Bootstrap CSS CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  
   <!-- Scrollbar Custom CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
@@ -25,6 +26,7 @@
 <body>
   <div id="root"></div>
   <script src="../src/index.js" type="text/javascript"></script>
+  
   <!-- jQuery CDN - Slim version (=without AJAX) -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <!-- Popper.JS -->
@@ -42,11 +44,10 @@
     $(document).ready(function() {
       $('#sidebarCollapse').on('click', function() {
         $('#sidebar').toggleClass('active');
-      });
-    });
-    $(document).ready(function() {
-      $('#sidebarCollapse').on('click', function() {
         $('#content').toggleClass('active');
+        if (!$('#sidebar').hasClass('active')){
+          $('#content').removeClass('active');
+        }
       });
     });
   </script>
